--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <link rel="stylesheet" href="assets/css/bootstrap.css"> -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -22,31 +23,99 @@
 				<li><i class="fas fa-video"></i></li>
 				<li><i class="fas fa-plus"></i></li>
 				<li><i class="far fa-bell"></i></li>
-				<li><i class="fas fa-bars"></i></li>
 			</ul>
 		</nav>
+		<div class="toggler">
+			<i class="fas fa-bars"></i>
+		</div>
 	</header>
 
-	<section class="main_hero__container">
+	<section class="main_hero__container"></section>
+
+	<section class="profile__container">
 		<div class="profile">
-			<div class="main_hero__image"></div>
-			<div class="main_hero__avatar"></div>
-			<div class="main_hero__title"></div>
-			<div class="main_hero__followers"></div>
+			<div class="profile__image"></div>
 		</div>
-		<div class="buttons">
-			<div class="main_hero__button-primary"></div>
-			<div class="main_hero__button-secondary"></div>
+
+		<div class="desc">
+			<div class="profile__title">Yuki Mukami</div>
+			<div class="profile__followers">30.000 seguidores</div>
+		</div>
+
+		<div class="btns">
+			<div class="btns__btn--primary">Mensaje</div>
+			<div class="btns__btn--secondary">Seguir</div>
 		</div>
 	</section>
+
+	<div class="separator"></div>
 
 	<section class="main_videos__container">
-		<div class="main_videos__title"></div>
-		<div class="main_videos__thumb"></div>
-		<div class="main_videos__title"></div>
-		<div class="main_videos__views"></div>
+		<div class="item">
+			<div class="main_videos__title">Videos populares</div>
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-1.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">Después de la vela - Yuki Mukami</div>
+			<div class="main_videos__views">16k vistas - 1 semana atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-2.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">Far Away - Yuki Mukami</div>
+			<div class="main_videos__views">100k vistas - 1 mes atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-3.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">City - Yuki Mukami</div>
+			<div class="main_videos__views">20k vistas - 1 mes atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-4.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">A Yuki Tale - Yuki Mukami</div>
+			<div class="main_videos__views">1m vistas - 1 año atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-5.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">Mapocho - Yuki Mukami</div>
+			<div class="main_videos__views">100k vistas - 1 mes atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-6.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">Luky Days - Yuki Mukami</div>
+			<div class="main_videos__views">40k vistas - 3 meses atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-7.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">30 days in My House</div>
+			<div class="main_videos__views">10k vistas - 4 meses atrás</div>
+		</div>
+
+		<div class="item">
+			<div class="main_videos__thumb">
+				<img src="assets/images/image-8.png" alt="">
+			</div>
+			<div class="main_videos__subtitle">Santiago - Yuki Mukami</div>
+			<div class="main_videos__views">40k vistas - 3 meses atrás</div>
+		</div>
 	</section>
 
-	<script src="assets/js/bootstrap.js"></script>
 </body>
 </html>
